--- a/package.json
+++ b/package.json
@@ -41,19 +41,19 @@
   "mcpName": "io.github.ChromeDevTools/chrome-devtools-mcp",
   "devDependencies": {
     "@eslint/js": "^9.35.0",
-    "@modelcontextprotocol/sdk": "1.24.3",
+    "@modelcontextprotocol/sdk": "^1.25.1",
     "@rollup/plugin-commonjs": "^29.0.0",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.3",
     "@stylistic/eslint-plugin": "^5.4.0",
     "@types/debug": "^4.1.12",
     "@types/filesystem": "^0.0.36",
-    "@types/node": "^25.0.0",
+    "@types/node": "^25.0.3",
     "@types/sinon": "^21.0.0",
     "@types/yargs": "^17.0.33",
-    "@typescript-eslint/eslint-plugin": "^8.43.0",
-    "@typescript-eslint/parser": "^8.43.0",
-    "chrome-devtools-frontend": "1.0.1555430",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
+    "chrome-devtools-frontend": "^1.0.1555430",
     "core-js": "3.47.0",
     "debug": "4.4.3",
     "eslint": "^9.35.0",
@@ -61,13 +61,13 @@
     "eslint-plugin-import": "^2.32.0",
     "globals": "^16.4.0",
     "prettier": "^3.6.2",
-    "puppeteer": "24.33.0",
-    "rollup": "4.53.3",
+    "puppeteer": "^24.34.0",
+    "rollup": "^4.54.0",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-license": "^3.6.0",
-    "sinon": "^21.0.0",
+    "sinon": "^21.0.1",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.43.0",
+    "typescript-eslint": "^8.50.1",
     "yargs": "18.0.0"
   },
   "engines": {
